<resources>
    <string name="app_name">Global Pharma</string>
    <string name="connexion">Connexion</string>
    <string name="btn_commencer">Commencer</string>
    <string name="btn_suivant">Suivant</string>
    <string name="registration">Inscription</string>
    <string name="name">Nom</string>
    <string name="email">Email</string>
    <string name="name_or_phone">Nom ou numéro de téléphone</string>
    <string name="phone_register">Numéro de téléphone</string>
    <string name="password">Mot de passe</string>
    <string name="error_txt">Veuillez remplir ce champ.</string>
    <string name="error_password">Le mot de passe doit avoir au moins 08 caractères.</string>
    <string name="confirm_password">Confirmation du mot de passe</string>
    <string name="remplir_correctement_champ">Veuillez remplir correctement les champs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_no_medication">Aucun traitement en cours</string>
    <string name="hello_blank_fragment">Bonjour fragment vide</string>
    <string name="password_not_matching">Mots de passe différents</string>
    <string name="prise_medicament">Prise de médicaments</string>
    <string name="tag_prise_medicament">Enregister vos différentes prises de médicaments dans le le but d\'être notifié à chaque prise</string>
    <string name="geolocalisation">Géolocalisaton</string>
    <string name="tag_geolocalisation">Effectuer une géolocalisation de pharmacie de garde la plus proche de votre emplacement"</string>
    <string name="preoccupation">Préoccupation</string>
    <string name="tag_preoccupation">Contacter une pharmacie partenaire pour tout préoccupation , effets indésirables lors d\'une prise de médicament</string>
    <string name="text_new_medication">Nouveau médicament</string>
    <string name="text_add_picture_medication">Ajouter une photo</string>
    <string name="text_add_medication_name">Nom du médicament (Obligatoire)</string>
    <string name="text_pathology">Pathologie</string>
    <string name="text_add_medication_form">Forme pharmaceutique (Obligatoire)</string>
    <string name="text_add_medication_quantity">Quantité</string>
    <string name="text_add_medication_frequency">Fréquence de la prise</string>
    <string name="btn_validate">Valider</string>
    <string name="passer">text_pass</string>
    <string name="text_my_treatment">Mes traitements</string>
    <string name="text_choose_photo_from_gallery">Choisir depus la galerie</string>
    <string name="text_take_a_photo">Prendre une photo</string>
    <string name="text_cancel">Annuler</string>
    <string name="text_daily">Journalier</string>
    <string name="text_weekly">Hebdomadaire</string>
    <string name="text_monthly">Mensuel</string>
    <string name="text_all_the">Tous les</string>
    <string name="text_starting_medicatio_date">Date de début</string>
    <string name="text_time_taking_medication">Moment de la prise</string>
    <string name="text_notes">Notes</string>
    <string name="text_lundi">Lundi</string>
    <string name="text_mardi">Mardi</string>
    <string name="text_mercredi">Mercredi</string>
    <string name="text_jeudi">Jeudi</string>
    <string name="text_vendredi">Vendredi</string>
    <string name="text_samedi">Samedi</string>
    <string name="text_dimanche">Dimanche</string>
    <string name="text_day_taking">Jour de prise</string>
    <string name="text_determinate_duration">Durée déterminée</string>
    <string name="text_indeterminate_duration">Durée indéterminée</string>
    <string name="text_before_eating">Avant les repas</string>
    <string name="text_while_eating">Pendant les repas</string>
    <string name="text_after_eating">Après les repas</string>
    <string name="text_whatever">Sans importance</string>
    <string name="text_out_of_eating">En dehors des repas</string>
    <string name="text_week">Semaine</string>
    <string name="text_day">Jour</string>
    <string name="text_month">Mois</string>
    <string name="itext_two_months">Bimestre</string>
    <string name="text_three_months">Trimestre</string>
    <string name="text_six_months">Semestre</string>
    <string name="text_year">Année</string>
    <string name="text_hour">Heure</string>
    <string name="text_error_medication_form">Veuillez choisir une forme de médicament</string>
    <string name="text_error_pathology">Veuillez renseigner la pathologie du médicament</string>
    <string name="text_error_mediction_name">Veuillez entrer le nom du médicament</string>
    <string name="text_error_medication_quantity">Veuillez entrer la quantité</string>
    <string name="text_error_medication_frequency">Veuillez préciser la fréquence de prise</string>
    <string name="text_error_starting_date_medication">Choisissez une date à partir de celle d\'aujourd\'hui</string>
    <string name="text_error_medication_type_duration">Veuillez renseigner le type de durée</string>
    <string name="text_errore_duration_medication">Veuillez renseigner la durée de la prise du médicament</string>
    <string name="text_error_moment_taking_medication">Veuillez renseigner le moment de la journée de la prise</string>
    <string name="notify_btn_taken">Pris</string>
    <string name="notify_btn_no_taken">Non pris</string>
</resources>
