<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundActivity"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="178dp"
        android:layout_height="42dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/radiusblanc"
        android:text="@string/connexion"
        android:textColor="@color/textcolorgray"
        app:layout_constraintEnd_toStartOf="@id/btnRegistration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/radius"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnConnect"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroung_green_circle"
        app:layout_constraintStart_toEndOf="@id/btnSubmit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtName"
        />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/radiusblanc"
        android:hint="@string/name"
        android:textColor="@color/textcolorgray"
        android:textColorHint="@color/textHintColor"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@id/btnRegistration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnConnect"
        app:layout_constraintTop_toBottomOf="@id/btnRegistration" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/radiusblanc"
        android:hint="@string/email"
        android:textColor="@color/textcolorgray"
        android:textColorHint="@color/textHintColor"

        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@id/btnRegistration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnConnect"
        app:layout_constraintTop_toBottomOf="@id/txtName" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/radiusblanc"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:textColor="@color/textcolorgray"
        android:textColorHint="@color/textHintColor"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@id/btnRegistration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnConnect"
        app:layout_constraintTop_toBottomOf="@id/txtEmail" />

    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/radiusblanc"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"

        android:textColor="@color/textcolorgray"
        android:textColorHint="@color/textHintColor"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@id/btnRegistration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnConnect"
        app:layout_constraintTop_toBottomOf="@id/txtPassword" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:width="252dip"
        android:background="@drawable/radius"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtConfirmPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>