<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_new_medication"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.NewMedicationActivity"
    android:background="@color/backgroundActivity">


    <TextView
        android:id="@+id/header_new_medication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bottom_radius"
        android:text="@string/text_new_medication"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        />

    <ScrollView
        android:id="@+id/new_medication_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_new_medication"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

          <androidx.constraintlayout.widget.ConstraintLayout
              android:id="@+id/add_photo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              >

              <ImageView
                  android:id="@+id/img_add_medication_picture"
                  android:layout_width="50dp"
                  android:layout_height="50dp"
                  android:layout_marginLeft="20dp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  android:src="@mipmap/ic_camera_foreground"
                  android:clickable="true"
                  />

              <TextView
                  android:id="@+id/text_add_medication_picture"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintStart_toEndOf="@id/img_add_medication_picture"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:text="@string/text_add_picture_medication"
                  android:textSize="20dp"
                  android:textColor="@color/textcolor"
                  />

          </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_add_medication_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_photo"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/text_add_medication_name"
                android:paddingLeft="20dp"
             />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_add_medication_pathology"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_add_medication_name"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/text_pathology"
                android:paddingLeft="20dp"
             />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_add_medication_form"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_add_medication_pathology"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/text_add_medication_form"
                android:paddingLeft="20dp"
            />

            <ImageView
                android:id="@+id/btn_add_medication_form"
                android:layout_width="30dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="@id/text_add_medication_form"
                app:layout_constraintBottom_toBottomOf="@id/text_add_medication_form"
                android:layout_marginRight="10dp"
                android:src="@mipmap/ic_more_than_foreground"
                android:clickable="true"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_add_medication_count"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_add_medication_form"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/text_add_medication_quantity"
                android:paddingLeft="20dp"
            />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_add_medication_frequency"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_add_medication_count"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/text_add_medication_frequency"
                android:paddingLeft="20dp"
            />

            <Button
                android:id="@+id/btn_add_medication_frequency"
                android:layout_width="30dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="@id/text_add_medication_frequency"
                app:layout_constraintBottom_toBottomOf="@id/text_add_medication_frequency"
                android:background="@mipmap/ic_sort_down_foreground"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_frequency_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_add_medication_frequency"
                android:visibility="invisible"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sp_add_frequency_medication"
                android:layout_width="160dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toStartOf="@id/btn_add_medication_frequency"
                app:layout_constraintBottom_toBottomOf="@id/text_add_medication_frequency"
                android:maxWidth="120dp"
                android:ellipsize="end"
                />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_add_medication_day"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_frequency_item"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/text_starting_medicatio_date"
                android:paddingLeft="20dp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_add_medication_type_duration"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_add_medication_day"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="Durée"
                android:paddingLeft="20dp"
                />

            <Button
                android:id="@+id/btn_add_medication_type_duration"
                android:layout_width="30dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="@id/text_add_medication_type_duration"
                app:layout_constraintBottom_toBottomOf="@id/text_add_medication_type_duration"
                android:background="@mipmap/ic_sort_down_foreground"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_add_medication_duration"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_add_medication_type_duration"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/text_time_taking_medication"
                android:paddingLeft="20dp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_add_medication_notes"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_add_medication_duration"
                android:layout_marginTop="10dp"
                android:background="@drawable/radiusblanc"
                android:hint="@string/text_notes"
                />

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_add_medication_notes"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/green_button_radius"
                android:text="@string/btn_validate"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>