<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txtNameLogin"
                android:layout_width="358dp"
                android:layout_height="47dp"
                android:layout_marginTop="116dp"
                android:paddingLeft="10dp"
                android:background="@drawable/radiusblanc"
                android:hint="@string/name_or_phone"
                android:textColor="@color/textcolorgray"
                android:textColorHint="@color/textHintColor"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtPasswordLogin"
                android:layout_width="361dp"
                android:layout_height="47dp"
                android:layout_marginTop="32dp"
                android:paddingLeft="10dp"
                android:background="@drawable/radiusblanc"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#757171"
                android:textColorHint="@color/textHintColor"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.275"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtNameLogin" />

            <TextView
                android:id="@+id/forgot_pass_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mot de passe oublié?"
                app:layout_constraintTop_toBottomOf="@+id/txtPasswordLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btnSubmit2" />

            <Button
                android:id="@+id/btnSubmit2"
                android:layout_width="327dp"
                android:layout_height="50dp"
                android:layout_marginTop="136dp"
                android:layout_marginBottom="128dp"
                android:width="252dip"
                android:background="@drawable/radius"
                android:text="@string/connexion"
                android:textColor="#FFF9F9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.357"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPasswordLogin" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>